Set print logo margin-top to 0px to prevent clipping at the page boundary

--- a/style.css
+++ b/style.css
@@ -1357,7 +1357,7 @@ textarea:focus {
 
     .print-header-logo {
         text-align: center;
-        margin-top: -20px;
+        margin-top: 0px;
         margin-bottom: 6px;
     }
 
